test/src/e2e_vm_tests/test_programs/should_fail/storage_ops_in_library/src/do_storage.sw
library do_storage;

const KEY: b256 = 0xfafafafafafafafafafafafafafafafafafafafafafafafafafafafafafafafa;

#[storage(read, write)]
pub fn side_effects() {
    asm(key: KEY, is_set, v) {
        srw v is_set key;
        sww key is_set v;
    }
}
